# cura-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
cura_plugin_MCPBridge/: MCPBridge.py  __init__.py  plugin.json
src/cura_mcp/: __init__.py  bridge.py  engine.py  project.py  server.py
src/cura_mcp/profiles/: creasee340.json  creasee340_boitier_michael_100.json  creasee340_boitier_qualite.json  generic220.json
