[project]
name = "cura-mcp"
version = "0.1.0"
description = "MCP server to slice 3D models with UltiMaker Cura (CuraEngine) headlessly"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [{ name = "Michael & Claude" }]
keywords = ["mcp", "cura", "3d-printing", "slicer", "curaengine"]
dependencies = ["fastmcp>=3.0"]

[project.scripts]
cura-mcp = "cura_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cura_mcp"]
