[project]
name = "cura-mcp"
version = "0.1.0"
description = "MCP server to slice 3D models with UltiMaker Cura (CuraEngine) headlessly"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0" }
authors = [{ name = "Claude Opus 4.8 for Michael Gagnon" }]
keywords = ["mcp", "cura", "3d-printing", "slicer", "curaengine"]
dependencies = ["fastmcp>=3.0", "trimesh>=4.0", "numpy", "scipy", "lxml", "networkx"]

[project.scripts]
cura-mcp = "cura_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cura_mcp"]
